# automation-hat

./: .coveragerc  .gitignore  CHANGELOG.md  Makefile  README.md  install.sh  pyproject.toml  test.py  uninstall.sh
automationhat/: __init__.py  pins.py
documentation/: REFERENCE.md
examples/: analog.py  input.py  lights.py  output.py  relay.py
examples/hat/: analog.py  input.py  lights.py  output.py  relay.py
examples/hat-mini/: analog.py  input.py  output.py
packaging/: CHANGELOG  makelog.sh
packaging/debian/: README  changelog  control  copyright  rules
tests/: conftest.py  test_setup.py
